# social-listening-se355

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_crewai.py  ui.py
src/social_listening/: crew.py  main.py
src/social_listening/config/: agents.yaml  tasks.yaml
src/social_listening/tools/: file_reader.py
src/social_listening_se355/: crew.py  main.py
src/social_listening_se355/config/: agents.yaml
