[project]
name = "social_listening_se355"
version = "0.1.0"
description = "Social listening using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
    "onnxruntime==1.20.1"
]

[project.scripts]
social_listening_se355 = "social_listening_se355.main:run"
run_crew = "social_listening_se355.main:run"
train = "social_listening_se355.main:train"
replay = "social_listening_se355.main:replay"
test = "social_listening_se355.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
